fix overflow and avoid z-indexes

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -50,6 +50,8 @@ nav {
       span {
         overflow: hidden;
         text-overflow: ellipsis;
+        max-width: 100%;
+        display: block;
       }
     }
 
